styles.css
:root {
  /* Primary Purples */
  --purple-50: hsl(260, 100%, 95%);
  --purple-300: hsl(264, 82%, 80%);
  --purple-500: hsl(263, 55%, 52%); /* Daniel's Card */

  /* Neutrals */
  --white: hsl(0, 0%, 100%); /* Jeanette & Kira's Cards */
  --grey-100: hsl(214, 17%, 92%); /* Likely Page Background */
  --grey-200: hsl(0, 0%, 81%); /* Avatar Borders */
  --grey-400: hsl(224, 10%, 45%);
  --grey-500: hsl(217, 19%, 35%); /* Jonathan's Card */
  --dark-blue: hsl(219, 29%, 14%); /* Patrick's Card */
  --black: hsl(0, 0%, 7%);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  font-family: 'Barlow Semi Condensed', Arial, sans-serif;
  background-color: var(--grey-200);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  padding: 1.25rem;
}

.testimonial-grid {
  display: flex;
  flex-direction: column;
  gap: 1.5rem; /* This creates the space between the 5 cards */
  width: 90%;
  max-width: 23rem; 
  margin: 2rem 0;
}

.card {
  padding: 2rem; /* Space inside each person's card */
  border-radius: 0.5rem; /* Rounded corners for each card */
  box-shadow: 0 1.5rem 2.5rem rgba(0, 0, 0, 0.1);
}








.attribution {
  font-size: 0.6875rem;
  text-align: center;
}
.attribution a {
  color: hsl(228, 45%, 44%);
}

